--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,11 @@ Alert {
 .alertButton {
   color: #000000;
 }
+.settings {
+  overSkin: Embed("assets/settings.png");
+  upSkin: Embed("assets/settings.png");
+  downSkin: Embed("assets/settings.png");
+}
 .userButton {
   text-align:center;
   vertical-align:middle;
